--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <h1 style="text-align:center"><span style="font-family:Comic Sans MS,cursive">Welcome to the Command and Control Server for the Plank Mini Botnet</span></h1>
 
+<p style="text-align:center"><a href="https://raw.githubusercontent.com/lozaning/CTooth.Cloud/main/targets.json">target list</a> | <a href="https://github.com/lozaning/CTooth.Cloud/raw/main/planck-mini.bin">Default Firmware</a></p>
+
+<p style="text-align:center">&nbsp;</p>
+
 <p style="text-align:center"><img alt="" src="https://raw.githubusercontent.com/lozaning/CTooth.Cloud/main/teeth.webp" style="height:1024px; width:1792px" /></p>
+
+<p style="text-align:center"><img alt="" src="https://github.com/lozaning/CTooth.Cloud/blob/main/PXL_20240221_221841250.jpg?raw=true" /></p>
