--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
 
 <p style="text-align:center"><img alt="" src="https://raw.githubusercontent.com/lozaning/CTooth.Cloud/main/teeth.webp" style="height:1024px; width:1792px" /></p>
 
-<p style="text-align:center"><img alt="" src="https://github.com/lozaning/CTooth.Cloud/blob/main/PXL_20240221_221841250.jpg?raw=true" /></p>
+<p style="text-align:center"><img alt="" src="https://github.com/lozaning/CTooth.Cloud/blob/main/PXL_20240221_221841250.jpg?raw=true" style="height:797px; width:600px" /></p>
