--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1 style="text-align:center"><span style="font-family:Comic Sans MS,cursive">Welcome to the Command and Control Server for the Plank Mini Botnet</span></h1>
 
-<p style="text-align:center"><a href="https://raw.githubusercontent.com/lozaning/CTooth.Cloud/main/targets.json">target list</a> | <a href="https://github.com/lozaning/CTooth.Cloud/raw/main/planck-mini.bin">Default Firmware</a></p>
+<p style="text-align:center"><a href="https://raw.githubusercontent.com/lozaning/CTooth.Cloud/main/targets.json">target list</a> | <a href="https://github.com/lozaning/CTooth.Cloud/raw/main/planck-mini.bin">Default Firmware</a> | <a href="https://github.com/lozaning/CTooth.Cloud/blob/main/BrushBot.ino">BotNet Firmware</a></p>
 
 <p style="text-align:center">&nbsp;</p>
 
